--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">test1</li>
+		<li data-ns-test="shoppingList">test2</li>
+		<li data-ns-test="shoppingList">test3</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">test1</li>
+		<li data-ns-test="holidayList">test2</li>
+		<li data-ns-test="holidayList">test3</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
